# Meteor-Challenge

./: README.md  pyproject.toml  testeTarken.py
