[tool.poetry]
name = "testetarken"
version = "0.1.0"
description = ""
authors = ["Geovane Lelis <geovanelelisds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
